src/components/Lottery.scss
.lottery-container {
  display: grid;
  grid-template-columns: 50px auto 50px;
  justify-content: center;
}

.matter-container {
  width: 960px;
  height: 720px;
}

.action-container {
  display: grid;
  grid-template-columns: 1fr max-content 1fr;
  gap: 8px;
  align-items: center;
  justify-content: space-between;
}

.right-action-container {
  display: flex;
  justify-content: end;
}

.rotate-label {
  margin: 0;
}

.rotate-speed-slider {
  width: 300px;
}

